--- a/alacritty.yml
+++ b/alacritty.yml
@@ -104,7 +104,7 @@
 # Font configuration
 #font:
   # Normal (roman) font face
-  #normal:
+  #  normal:
     # Font family
     #
     # Default:
@@ -114,7 +114,7 @@
     #family: monospace
 
     # The `style` can be specified to pick a specific face.
-    #style: Regular
+    #style: APL385 Unicode
 
   # Bold font face
   #bold:
